; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_inet6_hashtables.c_inet6_hash_connect.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_inet6_hashtables.c_inet6_hash_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inet_timewait_death_row = type { i32 }
%struct.sock = type { i32 }
%struct.TYPE_2__ = type { i32 }

@__inet6_check_established = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @inet6_hash_connect(%struct.inet_timewait_death_row* %0, %struct.sock* %1) #0 {
  %3 = alloca %struct.inet_timewait_death_row*, align 8
  %4 = alloca %struct.sock*, align 8
  %5 = alloca i32, align 4
  store %struct.inet_timewait_death_row* %0, %struct.inet_timewait_death_row** %3, align 8
  store %struct.sock* %1, %struct.sock** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.sock*, %struct.sock** %4, align 8
  %7 = call %struct.TYPE_2__* @inet_sk(%struct.sock* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load %struct.sock*, %struct.sock** %4, align 8
  %13 = call i32 @inet6_sk_port_offset(%struct.sock* %12)
  store i32 %13, i32* %5, align 4
  br label %14

14:                                               ; preds = %11, %2
  %15 = load %struct.inet_timewait_death_row*, %struct.inet_timewait_death_row** %3, align 8
  %16 = load %struct.sock*, %struct.sock** %4, align 8
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* @__inet6_check_established, align 4
  %19 = call i32 @__inet_hash_connect(%struct.inet_timewait_death_row* %15, %struct.sock* %16, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local %struct.TYPE_2__* @inet_sk(%struct.sock*) #1

declare dso_local i32 @inet6_sk_port_offset(%struct.sock*) #1

declare dso_local i32 @__inet_hash_connect(%struct.inet_timewait_death_row*, %struct.sock*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
